--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -18,3 +18,114 @@
   right:0px;
   padding: 3px;
 }
+.blur{
+  -ms-filter: blur(6px);
+  filter: blur(6px);
+}
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family:'Avenir','Helvetica, Neue','Helvetica','Arial';
+}
+
+
+#modal-content {
+    width: 50% ;
+    margin: 0 ;
+    padding: 10px 20px ;
+    border: 2px solid #aaa ;
+    background: #fff ;
+    position: fixed ;
+    display: none ;
+    z-index: 2 ;
+}
+
+#modal-overlay {
+    z-index: 1 ;
+    display: none ;
+    position: fixed ;
+    top: 0 ;
+    left: 0 ;
+    width: 100% ;
+    height: 120% ;
+    background-color: rgba( 0,0,0, 0.75 ) ;
+}
+
+.button-link {
+    color: #00f ;
+    text-decoration: underline ;
+}
+
+.button-link:hover {
+    cursor: pointer ;
+    color: #f00 ;
+}
+.button {
+  display       : inline-block;
+  border-radius : 5%;          /* 角丸       */
+  font-size     : 10pt;        /* 文字サイズ */
+  text-align    : center;      /* 文字位置   */
+  cursor        : pointer;     /* カーソル   */
+  padding       : 12px 12px;   /* 余白       */
+  background    : #990000;     /* 背景色     */
+  color         : #ffffff;     /* 文字色     */
+  line-height   : 1em;         /* 1行の高さ  */
+  transition    : .3s;         /* なめらか変化 */
+  box-shadow    : 3px 3px 3px #666666;  /* 影の設定 */
+  border        : 2px solid #990000;    /* 枠の指定 */
+}
+.loginPage {
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+    .loginPage_title {
+      margin-top: 12vh;
+      margin-bottom: 12vh;
+    }
+    .loginPage_btn {
+      display: block;
+      max-width: 400px;
+      
+      padding: 20px;
+      margin: 0 auto;
+      border-radius: 30px;
+      background: #fd5068;
+      color: #fff;
+      font-size: 20px;
+    }
+  .logo{
+    width: 70px;
+		height: 50px;
+  }
+li {
+  list-style: none;
+}
+.setting{
+  font-size: 20px;
+  /*display: flex;*/
+  /*flex-wrap: wrap;*/
+  box-sizing: border-box;
+  line-height: 1.8;
+  /*background: #fd5068;*/
+}
+.setting li{
+  border: thick double #32a1ce;
+  margin: 10px;
+  width: 100%;
+  text-align: center;
+  /*border-left: 1px solid #fff;*/
+}
+.setting a {
+  height: 70px;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.setting li:hover{
+  background: #DDDDDD;
+}
