--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -157,3 +157,23 @@ li {
   color: #fff;
   font-size: 20px;
 }
+.received_msg {
+    display: inline-block;
+    padding: 0 0 0 10px;
+    vertical-align: top;
+    width: 92%;
+}
+.received_withd_msg {
+    width: 57%;
+}
+.received_withd_msg h3 {
+       background: rgba(0,123,255,.5) none repeat scroll 0 0;
+    border-radius: 3px;
+    color: #ffffff;
+    font-size: 14px;
+    margin: 0;
+    padding: 5px 10px 5px 22px;
+    width: 100%;
+    border-bottom-right-radius: 50px;
+    border-top-left-radius: 50px;
+}
